# kalshibench

./: DESCRIPTION.md  README.md  create_kalshibench.py  dataset_cleaner.py  dataset_creator.py  kalshibench.py  main.py  models_to_use.md  pyproject.toml  run_full.sh  run_neurips_benchmark.py  run_test.sh  training.py
kalshibench_v2_2025-12-17_20-54-58/: run_config.json
kalshibench_v2_2025-12-17_20-54-58/tier1_flagships/: claude_opus_4.5_20251217_023819.json  deepseek_v3.2_20251217_201128.json  gpt_5.2_xhigh_20251217_023819.json  kimi_k2_20251217_205502.json  metadata_20251217_205502.json  paper_dataset_prompt_20251217_205502.txt  paper_methods_prompt_20251217_205502.txt  paper_results_prompt_20251217_205502.txt  qwen3_235b_thinking_20251217_023819.json  report_20251217_205502.md  summary_20251217_205502.json
kalshibench_v2_2025-12-17_20-54-58/tier2_midtier/: claude_sonnet_4.5_20251217_201945.json  gpt_4o_20251217_201945.json  gpt_5.1_20251217_201945.json
kalshibench_v2_2025-12-17_20-54-58/tier3_reasoning/: dataset_analysis_20251217_211141.json  gpt_5.1_high_20251217_053303.json  gpt_5.2_20251217_053303.json  gpt_5.2_high_20251217_053303.json  metadata_20251217_211141.json  o1_20251217_053303.json  summary_20251217_211141.json
