[project]
name = "kalshibench"
version = "0.1.0"
description = "KalshiBench: Evaluating LLM Forecasting Calibration via Prediction Markets"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "2084 Collective" }
]
keywords = [
    "llm",
    "benchmark",
    "calibration",
    "forecasting",
    "prediction-markets",
    "evaluation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core benchmark dependencies
    "numpy>=1.24.0",
    "datasets>=2.14.0",
    "litellm>=1.0.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
# For running GRPO training (training.py)
training = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "trl>=0.7.0",
    "wandb>=0.15.0",
    "scipy>=1.10.0",
    "unsloth @ git+https://github.com/unslothai/unsloth.git",
]

# For dataset creation (dataset_creator.py)
dataset = [
    "requests>=2.28.0",
    "tqdm>=4.65.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# All dependencies
all = [
    "kalshibench[training,dataset,dev]",
]

[project.scripts]
kalshibench = "kalshibench:main"

[project.urls]
Homepage = "https://github.com/2084collective/kalshibench"
Documentation = "https://github.com/2084collective/kalshibench#readme"
Repository = "https://github.com/2084collective/kalshibench"
Issues = "https://github.com/2084collective/kalshibench/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv.sources]
# Pin unsloth to git for training
unsloth = { git = "https://github.com/unslothai/unsloth.git" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

